# ros_visodom_test

./: README.md
data/: place_data_here
data/results/: 2011-01-25-06-29-26.csv  chek_error.ipynb  kitti_01.csv  kitti_03.csv  rgbd_dataset_freiburg2_pioneer_slam.csv
launch/: info.conf  rosconsole.conf  test.launch  test_freiburg2_pioneer_slam.launch  test_kitti_1.launch  test_kitti_3.launch  tf.launch
src/odometry_estimator/: CMakeLists.txt  package.xml
src/odometry_estimator/src/: backup  odometry_estimator.cpp
src/vis_odometry_test/: CMakeLists.txt
src/vis_odometry_test/cmake/Modules/libviso2/: CMakeCache.txt  Makefile  cmake_install.cmake  viso2
src/vis_odometry_test/libviso2/: demo.cpp  viso_mono.cpp  viso_mono.h
src/vis_odometry_test/src/: libviso_mono_odometr.cpp  libviso_mono_odometr.h  odom_listener.cpp  odometer_base.h  utils.h
